@@ -1,3 +1,8 @@
+2015-11-25  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
+
+	PR rtl-optimization/68435
+	* gcc.dg/pr68435.c: New test.
+
 2015-11-25  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/68517
