@@ -1,3 +1,9 @@
+2015-11-25  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
+
+	PR rtl-optimization/68435
+	* ifcvt.c (noce_try_cmove_arith): Skip final insn when checking
+	for conflicts between a, b and the set destinations.
+
 2015-11-25  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/68517
